<resources>
    <string name="app_name">Body Gauge</string>
    <string name="bmi_logo">BMI Logo</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="background_body_builder_image">Background Body builder image</string>
    <string name="body_gauge">Body Gauge</string>
    <string name="result">RESULT</string>
    <string name="app_logo_splash">app logo splash</string>
</resources>