<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/shadow_image"
        android:alpha="0.4"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background_body_builder_image"
        />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_gauge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_mass_index"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:layout_below="@+id/heading"
        android:gravity="center_horizontal"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeStepGranularity="1sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            >

<!--            Row:-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2"
                android:baselineAligned="false"
                >

<!--                Column: 1-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/weightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:layout_gravity="start"
                        />

                    <EditText
                        android:id="@+id/weigthEdit"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:textSize="26sp"
                        android:hint="@string/kg"
                        android:textColorHint="#80282828"
                        android:textColor="@color/navy"
                        android:autofillHints="creditCardNumber"
                        android:inputType="number"
                        />
                </LinearLayout>

<!--                Column: 2-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/heigthText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:layout_gravity="end"
                        />

                    <EditText
                        android:id="@+id/heightEdit"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:textSize="26sp"
                        android:hint="@string/cm"
                        android:textColorHint="#80282828"
                        android:textColor="@color/navy"
                        android:layout_gravity="end"
                        android:autofillHints="creditCardNumber"
                        android:inputType="number"
                        />
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/calculateBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate_bmi"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/navy"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/navy"
                />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bmi_image"
        android:layout_marginTop="260dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/bmi_logo"

        />



</RelativeLayout>